// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NewsletterSignup Snapshots Renders the bad email UI snapshot correctly 1`] = `
<div
  className="chakra-stack css-1b9dj1z"
  data-testid="ds-newsletterSignup"
  id="test-id"
>
  <div
    className="chakra-stack css-1ey9w6j"
    data-testid="ds-newsletterSignup-appeal"
  >
    <h2
      className="chakra-heading css-sktjnm"
      data-testid="ds-heading"
    >
      Sign Up for Our Newsletter
    </h2>
    <a
      className="chakra-link css-1xdhyk6"
      data-testid="ds-link"
      href="https://www.nypl.org/help/about-nypl/legal-notices/privacy-policy"
      rel="nofollow noopener noreferrer"
      target="_blank"
    >
      Privacy Policy
      <span
        className="css-0"
      >
        This link opens in a new window
      </span>
      <svg
        aria-hidden={true}
        className="chakra-icon css-1vgifmd"
        data-file-name="SvgActionLaunch"
        focusable={false}
        id="link-privacy-policy-external-icon"
        role="img"
        title="External link"
      />
    </a>
  </div>
  <div
    className="chakra-stack css-tl3ftk"
    data-testid="ds-newsletterSignup-form"
  >
    <form
      className="ds-newslettersignup-form css-1xdhyk6"
      data-testid="ds-form"
      id="test-id-form"
      onSubmit={[MockFunction]}
    >
      <div
        className="css-fadkce"
        data-testid="ds-simpleGrid"
        id="test-id-form-parent"
      >
        <div
          className="css-l5w1vc"
          data-testid="ds-simpleGrid"
          id="test-id-form-child0"
        >
          <div
            className="css-1u8qly9"
            data-testid="ds-textInput"
            id="test-id-textInput-componentWrapper"
          >
            <label
              className="css-1xdhyk6"
              data-testid="ds-label"
              htmlFor="test-id-textInput"
              id="test-id-textInput-label"
            >
              Email Address
              <span>
                 (required)
              </span>
            </label>
            <div
              className="css-79elbk"
            >
              <input
                aria-describedby="test-id-textInput-helperErrorText"
                aria-invalid={true}
                aria-required={true}
                autoComplete="email"
                className="chakra-input css-0"
                disabled={false}
                id="test-id-textInput"
                name="email"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onInvalid={[Function]}
                placeholder="Enter your email address"
                required={true}
                step={null}
                type="email"
                value=""
              />
            </div>
            <div
              aria-atomic={true}
              aria-live="polite"
              className="css-1xdhyk6"
              data-isinvalid={true}
              data-testid="ds-helperErrorText"
              id="test-id-textInput-helperErrorText"
            >
              <div
                className="css-0"
                dangerouslySetInnerHTML={
                  {
                    "__html": "There was a problem. Please enter a valid email address.",
                  }
                }
              />
            </div>
          </div>
        </div>
        <div
          className="css-l5w1vc"
          data-testid="ds-simpleGrid"
          id="test-id-form-child1"
        >
          <button
            className="chakra-button css-1xdhyk6"
            data-testid="ds-button"
            id="test-id-submit"
            type="submit"
          >
            Submit
          </button>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`NewsletterSignup Snapshots Renders the custom error state snapshot correctly 1`] = `
<div
  className="chakra-stack css-1b9dj1z"
  data-testid="ds-newsletterSignup"
  id="test-id"
>
  <div
    className="chakra-stack css-1ey9w6j"
    data-testid="ds-newsletterSignup-appeal"
  >
    <h2
      className="chakra-heading css-sktjnm"
      data-testid="ds-heading"
    >
      Sign Up for Our Newsletter
    </h2>
    <a
      className="chakra-link css-1xdhyk6"
      data-testid="ds-link"
      href="https://www.nypl.org/help/about-nypl/legal-notices/privacy-policy"
      rel="nofollow noopener noreferrer"
      target="_blank"
    >
      Privacy Policy
      <span
        className="css-0"
      >
        This link opens in a new window
      </span>
      <svg
        aria-hidden={true}
        className="chakra-icon css-1vgifmd"
        data-file-name="SvgActionLaunch"
        focusable={false}
        id="link-privacy-policy-external-icon"
        role="img"
        title="External link"
      />
    </a>
  </div>
  <div
    className="chakra-stack css-tl3ftk"
    data-testid="ds-newsletterSignup-form"
  >
    <div
      className="feedback-body response css-6cjp67"
      tabIndex={-1}
    >
      <div
        className="css-116fi6s"
      >
        <svg
          aria-hidden={true}
          className="chakra-icon css-3u73el"
          data-file-name="SvgErrorFilled"
          focusable={false}
          role="img"
          title="errorFilled icon"
        />
        <p
          className="chakra-text css-ia9jis"
          data-testid="ds-text"
        >
          Oops! Something went wrong.
        </p>
      </div>
      <div>
        If the error persists,
        <a
          href="mailto:enews@nypl.org?subject=Please re-activate my e-mail address"
        >
          contact our e-mail team
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`NewsletterSignup Snapshots Renders the default confirmation state snapshot correctly 1`] = `
<div
  className="chakra-stack css-1b9dj1z"
  data-testid="ds-newsletterSignup"
  id="test-id"
>
  <div
    className="chakra-stack css-1ey9w6j"
    data-testid="ds-newsletterSignup-appeal"
  >
    <h2
      className="chakra-heading css-sktjnm"
      data-testid="ds-heading"
    >
      Sign Up for Our Newsletter
    </h2>
    <a
      className="chakra-link css-1xdhyk6"
      data-testid="ds-link"
      href="https://www.nypl.org/help/about-nypl/legal-notices/privacy-policy"
      rel="nofollow noopener noreferrer"
      target="_blank"
    >
      Privacy Policy
      <span
        className="css-0"
      >
        This link opens in a new window
      </span>
      <svg
        aria-hidden={true}
        className="chakra-icon css-1vgifmd"
        data-file-name="SvgActionLaunch"
        focusable={false}
        id="link-privacy-policy-external-icon"
        role="img"
        title="External link"
      />
    </a>
  </div>
  <div
    className="chakra-stack css-tl3ftk"
    data-testid="ds-newsletterSignup-form"
  >
    <div
      className="feedback-body response css-6cjp67"
      tabIndex={-1}
    >
      <div
        className="css-116fi6s"
      >
        <svg
          aria-hidden={true}
          className="chakra-icon css-1vgifmd"
          data-file-name="SvgActionCheckCircleFilled"
          focusable={false}
          role="img"
          title="actionCheckCircleFilled icon"
        />
        <p
          className="chakra-text css-1e5ycxp"
          data-testid="ds-text"
        >
          Thank you for signing up!
        </p>
      </div>
      <p
        className="chakra-text css-1xdhyk6"
        data-testid="ds-text"
      >
        You can update your email subscription preferences at any time using the links at the bottom of the email.
      </p>
    </div>
  </div>
</div>
`;

exports[`NewsletterSignup Snapshots Renders the default error state snapshot correctly 1`] = `
<div
  className="chakra-stack css-1b9dj1z"
  data-testid="ds-newsletterSignup"
  id="test-id"
>
  <div
    className="chakra-stack css-1ey9w6j"
    data-testid="ds-newsletterSignup-appeal"
  >
    <h2
      className="chakra-heading css-sktjnm"
      data-testid="ds-heading"
    >
      Sign Up for Our Newsletter
    </h2>
    <a
      className="chakra-link css-1xdhyk6"
      data-testid="ds-link"
      href="https://www.nypl.org/help/about-nypl/legal-notices/privacy-policy"
      rel="nofollow noopener noreferrer"
      target="_blank"
    >
      Privacy Policy
      <span
        className="css-0"
      >
        This link opens in a new window
      </span>
      <svg
        aria-hidden={true}
        className="chakra-icon css-1vgifmd"
        data-file-name="SvgActionLaunch"
        focusable={false}
        id="link-privacy-policy-external-icon"
        role="img"
        title="External link"
      />
    </a>
  </div>
  <div
    className="chakra-stack css-tl3ftk"
    data-testid="ds-newsletterSignup-form"
  >
    <div
      className="feedback-body response css-6cjp67"
      tabIndex={-1}
    >
      <div
        className="css-116fi6s"
      >
        <svg
          aria-hidden={true}
          className="chakra-icon css-3u73el"
          data-file-name="SvgErrorFilled"
          focusable={false}
          role="img"
          title="errorFilled icon"
        />
        <p
          className="chakra-text css-ia9jis"
          data-testid="ds-text"
        >
          Oops! Something went wrong.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`NewsletterSignup Snapshots Renders the default form UI snapshot correctly 1`] = `
<div
  className="chakra-stack css-1b9dj1z"
  data-testid="ds-newsletterSignup"
  id="test-id"
>
  <div
    className="chakra-stack css-1ey9w6j"
    data-testid="ds-newsletterSignup-appeal"
  >
    <h2
      className="chakra-heading css-sktjnm"
      data-testid="ds-heading"
    >
      Sign Up for Our Newsletter
    </h2>
    <a
      className="chakra-link css-1xdhyk6"
      data-testid="ds-link"
      href="https://www.nypl.org/help/about-nypl/legal-notices/privacy-policy"
      rel="nofollow noopener noreferrer"
      target="_blank"
    >
      Privacy Policy
      <span
        className="css-0"
      >
        This link opens in a new window
      </span>
      <svg
        aria-hidden={true}
        className="chakra-icon css-1vgifmd"
        data-file-name="SvgActionLaunch"
        focusable={false}
        id="link-privacy-policy-external-icon"
        role="img"
        title="External link"
      />
    </a>
  </div>
  <div
    className="chakra-stack css-tl3ftk"
    data-testid="ds-newsletterSignup-form"
  >
    <form
      className="ds-newslettersignup-form css-1xdhyk6"
      data-testid="ds-form"
      id="test-id-form"
      onSubmit={[MockFunction]}
    >
      <div
        className="css-fadkce"
        data-testid="ds-simpleGrid"
        id="test-id-form-parent"
      >
        <div
          className="css-l5w1vc"
          data-testid="ds-simpleGrid"
          id="test-id-form-child0"
        >
          <div
            className="css-1u8qly9"
            data-testid="ds-textInput"
            id="test-id-textInput-componentWrapper"
          >
            <label
              className="css-1xdhyk6"
              data-testid="ds-label"
              htmlFor="test-id-textInput"
              id="test-id-textInput-label"
            >
              Email Address
              <span>
                 (required)
              </span>
            </label>
            <div
              className="css-79elbk"
            >
              <input
                aria-describedby="test-id-textInput-helperErrorText"
                aria-required={true}
                autoComplete="email"
                className="chakra-input css-0"
                disabled={false}
                id="test-id-textInput"
                name="email"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onInvalid={[Function]}
                placeholder="Enter your email address"
                required={true}
                step={null}
                type="email"
                value=""
              />
            </div>
            <div
              aria-atomic={true}
              aria-live="polite"
              className="css-1xdhyk6"
              data-isinvalid={false}
              data-testid="ds-helperErrorText"
              id="test-id-textInput-helperErrorText"
            >
              <div
                className="css-0"
              >
                Ex: 
                jdoe@domain.com
                <br />
              </div>
            </div>
          </div>
        </div>
        <div
          className="css-l5w1vc"
          data-testid="ds-simpleGrid"
          id="test-id-form-child1"
        >
          <button
            className="chakra-button css-1xdhyk6"
            data-testid="ds-button"
            id="test-id-submit"
            type="submit"
          >
            Submit
          </button>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`NewsletterSignup Snapshots Renders the form UI with description snapshot correctly 1`] = `
<div
  className="chakra-stack css-1b9dj1z"
  data-testid="ds-newsletterSignup"
  id="test-id"
>
  <div
    className="chakra-stack css-1ey9w6j"
    data-testid="ds-newsletterSignup-appeal"
  >
    <h2
      className="chakra-heading css-sktjnm"
      data-testid="ds-heading"
    >
      Sign Up for Our Newsletter
    </h2>
    <p
      className="chakra-text css-1xdhyk6"
      data-testid="ds-text"
    >
      Why not?
    </p>
    <a
      className="chakra-link css-1xdhyk6"
      data-testid="ds-link"
      href="https://www.nypl.org/help/about-nypl/legal-notices/privacy-policy"
      rel="nofollow noopener noreferrer"
      target="_blank"
    >
      Privacy Policy
      <span
        className="css-0"
      >
        This link opens in a new window
      </span>
      <svg
        aria-hidden={true}
        className="chakra-icon css-1vgifmd"
        data-file-name="SvgActionLaunch"
        focusable={false}
        id="link-privacy-policy-external-icon"
        role="img"
        title="External link"
      />
    </a>
  </div>
  <div
    className="chakra-stack css-tl3ftk"
    data-testid="ds-newsletterSignup-form"
  >
    <form
      className="ds-newslettersignup-form css-1xdhyk6"
      data-testid="ds-form"
      id="test-id-form"
      onSubmit={[MockFunction]}
    >
      <div
        className="css-fadkce"
        data-testid="ds-simpleGrid"
        id="test-id-form-parent"
      >
        <div
          className="css-l5w1vc"
          data-testid="ds-simpleGrid"
          id="test-id-form-child0"
        >
          <div
            className="css-1u8qly9"
            data-testid="ds-textInput"
            id="test-id-textInput-componentWrapper"
          >
            <label
              className="css-1xdhyk6"
              data-testid="ds-label"
              htmlFor="test-id-textInput"
              id="test-id-textInput-label"
            >
              Email Address
              <span>
                 (required)
              </span>
            </label>
            <div
              className="css-79elbk"
            >
              <input
                aria-describedby="test-id-textInput-helperErrorText"
                aria-required={true}
                autoComplete="email"
                className="chakra-input css-0"
                disabled={false}
                id="test-id-textInput"
                name="email"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onInvalid={[Function]}
                placeholder="Enter your email address"
                required={true}
                step={null}
                type="email"
                value=""
              />
            </div>
            <div
              aria-atomic={true}
              aria-live="polite"
              className="css-1xdhyk6"
              data-isinvalid={false}
              data-testid="ds-helperErrorText"
              id="test-id-textInput-helperErrorText"
            >
              <div
                className="css-0"
              >
                Ex: 
                jdoe@domain.com
                <br />
              </div>
            </div>
          </div>
        </div>
        <div
          className="css-l5w1vc"
          data-testid="ds-simpleGrid"
          id="test-id-form-child1"
        >
          <button
            className="chakra-button css-1xdhyk6"
            data-testid="ds-button"
            id="test-id-submit"
            type="submit"
          >
            Submit
          </button>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`NewsletterSignup Snapshots Renders the form UI with formHelperText snapshot correctly 1`] = `
<div
  className="chakra-stack css-1b9dj1z"
  data-testid="ds-newsletterSignup"
  id="test-id"
>
  <div
    className="chakra-stack css-1ey9w6j"
    data-testid="ds-newsletterSignup-appeal"
  >
    <h2
      className="chakra-heading css-sktjnm"
      data-testid="ds-heading"
    >
      Sign Up for Our Newsletter
    </h2>
    <a
      className="chakra-link css-1xdhyk6"
      data-testid="ds-link"
      href="https://www.nypl.org/help/about-nypl/legal-notices/privacy-policy"
      rel="nofollow noopener noreferrer"
      target="_blank"
    >
      Privacy Policy
      <span
        className="css-0"
      >
        This link opens in a new window
      </span>
      <svg
        aria-hidden={true}
        className="chakra-icon css-1vgifmd"
        data-file-name="SvgActionLaunch"
        focusable={false}
        id="link-privacy-policy-external-icon"
        role="img"
        title="External link"
      />
    </a>
  </div>
  <div
    className="chakra-stack css-tl3ftk"
    data-testid="ds-newsletterSignup-form"
  >
    <form
      className="ds-newslettersignup-form css-1xdhyk6"
      data-testid="ds-form"
      id="test-id-form"
      onSubmit={[MockFunction]}
    >
      <div
        className="css-fadkce"
        data-testid="ds-simpleGrid"
        id="test-id-form-parent"
      >
        <div
          className="css-l5w1vc"
          data-testid="ds-simpleGrid"
          id="test-id-form-child0"
        >
          <div
            className="css-1u8qly9"
            data-testid="ds-textInput"
            id="test-id-textInput-componentWrapper"
          >
            <label
              className="css-1xdhyk6"
              data-testid="ds-label"
              htmlFor="test-id-textInput"
              id="test-id-textInput-label"
            >
              Email Address
              <span>
                 (required)
              </span>
            </label>
            <div
              className="css-79elbk"
            >
              <input
                aria-describedby="test-id-textInput-helperErrorText"
                aria-required={true}
                autoComplete="email"
                className="chakra-input css-0"
                disabled={false}
                id="test-id-textInput"
                name="email"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onInvalid={[Function]}
                placeholder="Enter your email address"
                required={true}
                step={null}
                type="email"
                value=""
              />
            </div>
            <div
              aria-atomic={true}
              aria-live="polite"
              className="css-1xdhyk6"
              data-isinvalid={false}
              data-testid="ds-helperErrorText"
              id="test-id-textInput-helperErrorText"
            >
              <div
                className="css-0"
              >
                Ex: 
                jdoe@domain.com
                <br />
                You need help.
              </div>
            </div>
          </div>
        </div>
        <div
          className="css-l5w1vc"
          data-testid="ds-simpleGrid"
          id="test-id-form-child1"
        >
          <button
            className="chakra-button css-1xdhyk6"
            data-testid="ds-button"
            id="test-id-submit"
            type="submit"
          >
            Submit
          </button>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`NewsletterSignup Snapshots Renders the submitting state snapshot correctly 1`] = `
<div
  className="chakra-stack css-1b9dj1z"
  data-testid="ds-newsletterSignup"
  id="test-id"
>
  <div
    className="chakra-stack css-1ey9w6j"
    data-testid="ds-newsletterSignup-appeal"
  >
    <h2
      className="chakra-heading css-sktjnm"
      data-testid="ds-heading"
    >
      Sign Up for Our Newsletter
    </h2>
    <a
      className="chakra-link css-1xdhyk6"
      data-testid="ds-link"
      href="https://www.nypl.org/help/about-nypl/legal-notices/privacy-policy"
      rel="nofollow noopener noreferrer"
      target="_blank"
    >
      Privacy Policy
      <span
        className="css-0"
      >
        This link opens in a new window
      </span>
      <svg
        aria-hidden={true}
        className="chakra-icon css-1vgifmd"
        data-file-name="SvgActionLaunch"
        focusable={false}
        id="link-privacy-policy-external-icon"
        role="img"
        title="External link"
      />
    </a>
  </div>
  <div
    className="chakra-stack css-tl3ftk"
    data-testid="ds-newsletterSignup-form"
  >
    <form
      className="ds-newslettersignup-form css-1xdhyk6"
      data-testid="ds-form"
      id="test-id-form"
      onSubmit={[MockFunction]}
    >
      <div
        className="css-fadkce"
        data-testid="ds-simpleGrid"
        id="test-id-form-parent"
      >
        <div
          className="css-l5w1vc"
          data-testid="ds-simpleGrid"
          id="test-id-form-child0"
        >
          <div
            className="css-1u8qly9"
            data-testid="ds-textInput"
            id="test-id-textInput-componentWrapper"
          >
            <label
              className="css-1xdhyk6"
              data-testid="ds-label"
              htmlFor="test-id-textInput"
              id="test-id-textInput-label"
            >
              Email Address
              <span>
                 (required)
              </span>
            </label>
            <div
              className="css-79elbk"
            >
              <input
                aria-describedby="test-id-textInput-helperErrorText"
                aria-required={true}
                autoComplete="email"
                className="chakra-input css-0"
                disabled={true}
                id="test-id-textInput"
                name="email"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onInvalid={[Function]}
                placeholder="Enter your email address"
                required={true}
                step={null}
                type="email"
                value=""
              />
            </div>
            <div
              aria-atomic={true}
              aria-live="polite"
              className="css-1xdhyk6"
              data-isinvalid={false}
              data-testid="ds-helperErrorText"
              id="test-id-textInput-helperErrorText"
            >
              <div
                className="css-0"
              >
                Ex: 
                jdoe@domain.com
                <br />
              </div>
            </div>
          </div>
        </div>
        <div
          className="css-l5w1vc"
          data-testid="ds-simpleGrid"
          id="test-id-form-child1"
        >
          <button
            className="chakra-button css-1xdhyk6"
            data-testid="ds-button"
            disabled={true}
            id="test-id-submit"
            type="submit"
          >
            Submit
          </button>
        </div>
      </div>
    </form>
  </div>
</div>
`;
